	* CORE: Added update() and refresh() to ForeignCollection which call through to the inner Dao.
	* CORE: Improved the custom data persister code so it can extend one of the types.  Added docs and example.
	* CORE: Added a Joda DateTime persister which uses reflection.  You have to specify the dataType=DataType.DATE_TIME.

4.35: 2/22/2012 (svn r2337)
	* CORE: Fixed bug where not all queried objects were added to cache. Thanks to Filipe Leandro. Fixes bug #3491418.

4.34: 2/22/2012 (svn r2318)
	* CORE: Fixed restriction on Long auto-incremented SQLite ids. Thanks to John Kristian. Fixes bug #3474479.
	* CORE: Added support for sql NOT IN clause to where().  Thanks to Marvin Jomble.  Fixes feature #3474550.
	* CORE: Added support for sql HAVING clause to QueryBuilder.  Thanks to Stephen Couchman.  Fixes feature #3470923.
	* CORE: Added updateBuilder.update() and deleteBuilder.delete().  Thanks to Marvin Jomble.  Fixes feature #3475613.
	* CORE: Fixed problem with ForeignCollections when inserting into cache. Thanks to Nick Campion. Fixes bug #3486577.
	* CORE: Revamped the CloseableIterator to support first, previous, ... moving methods to support more than next.
	* CORE: Added result-flags to some of the iterator methods to allow forwards/backwards in JDBC.
	* CORE: Refactored the FieldConverter and BaseDataType stuff a bit to remove some duplicate code.
	* CORE: Added convenience QueryBuilder.queryForFirst() and queryRawFirst() methods.
	* CORE: Added setArgumentHolderValue() to the PreparedStmt so we can set an argument on prepared queries directly.
	* CORE: Removed the @DatabaseFieldSimple and friends annotations that were deprecated in 4.30.
	* ANDROID: Significantly simplified, improved the internal DAO caching.  Thanks to Ben Mosher.  Fixes bug #3487674. 
	* ANDROID: Fixed missing exception handling in AndroidConnectionSource.  Thanks to Roger Keays.  Fixes bug #3474501.